fjord-compiler/test/errors/uniqueness/ExpectUnique.fj
module errors.uniqueness.ExpectUnique

requiresUnique : Int -* Int
requiresUnique x =
  x

passesShared : Int -> Int
passesShared x =
  requiresUnique x

value : Int 
value = 
  passesShared 3
